--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- END HEADER -->
   <!-- MAIN -->
   <!-- SECTION 1 -->
-  <section>
+  <section class="section1">
     <div class="container container-1">
       <h1>Build The Community Your Fans Will Love</h1>
       <p>
@@ -39,44 +39,85 @@
   </section>
   <!-- END SECTION 1 -->
 
-  <section>
+  <section class="section2">
     <div class="container container-2">
-      1.4k+
-      Communities Formed
-      2.7m+
-      Messages Sent
+      <div class="card card1">
+        <picture>
+          <img src="images/icon-communities.svg" alt="">
+        </picture>
+        <h1>1.4k+</h1>
+        <p>Communities Formed</p>
+      </div>
+      <div class="card card2">
+        <picture>
+          <img src="images/icon-messages.svg" alt="">
+        </picture>
+        <h1>2.7m+</h1>
+        <p>Messages Sent</p>
+      </div>
     </div>
   </section>
 
-  Grow Together
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
+  <section class="section3">
+    <div class="container container-3">
+      <picture>
+        <img src="images/illustration-grow-together.svg" alt="">
+      </picture>
+      <h1>Grow Together</h1>
+      <p>
+        Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
+      </p>
+    </div>
+  </section> 
 
-  Flowing Conversations
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-  just-in-time loading for a more natural flow.
+  <section class="section4">
+    <div class="container container-4">
+      <picture>
+        <img src="images/illustration-flowing-conversation.svg" alt="">
+      </picture>
+      <h1>Flowing Conversations</h1>
+      <p>
+        You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
+      </p>
+    </div>
+  </section>
 
-  Your Users
-  It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
-  once signed in to your app, your users can start chatting immediately.
+  <section class="section5">
+    <div class="container container-5">
+      <picture>
+        <img src="images/illustration-your-users.svg" alt="">
+      </picture>
+      <h1>Your Users</h1>
+      <p>
+        It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.
+      </p>
+    </div>
+  </section>
 
-  Ready To Build Your Community?
-  Get Started For Free
+  <section class="section6">
+    <div class="container container-6">
+      <h1>Ready To Build Your Community?</h1>
+      <a href="#">Get Started For Free</a>
+    </div>
+  </section>
   <!-- END MAIN -->
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
-  vestibulum a, ultrices quis sem.
-  
-  Phone: +1-543-123-4567
-  example@huddle.com
-
-  Newsletter
-  To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
-  send you spam or pass on your email address
-
-  Subscribe
-
   <footer>
+    <div class="footer-general">
+      <div class="f-container fc-1">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia
+        vestibulum a, ultrices quis sem.
+        
+        Phone: +1-543-123-4567
+        example@huddle.com
+      </div>
+      <div class="f-container fc-2">
+        <h1>Newsletter</h1>
+        <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll neversend you spam or pass on your email address</p>
+        <a href="#">Subscribe</a>
+      </div>
+    </div>
+
+  
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
