--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="Style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+ 
   <title>Frontend Mentor | Huddle landing page with curved sections</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -38,7 +38,7 @@
     </div>
   </section>
   <!-- END SECTION 1 -->
-
+  <!-- SECTION 2 -->
   <section class="section2">
     <div class="container container-2">
       <div class="card card1">
@@ -57,7 +57,8 @@
       </div>
     </div>
   </section>
-
+  <!-- END SECTION 2 -->
+  <!-- SECTION 3 -->
   <section class="section3">
     <div class="container container-3">
       <picture>
@@ -69,7 +70,8 @@
       </p>
     </div>
   </section> 
-
+  <!-- END SECTION 3 -->
+  <!-- SECTION 4 -->
   <section class="section4">
     <div class="container container-4">
       <picture>
@@ -81,7 +83,8 @@
       </p>
     </div>
   </section>
-
+  <!-- END SECTION 4 -->
+  <!-- SECTION 5 -->
   <section class="section5">
     <div class="container container-5">
       <picture>
@@ -93,28 +96,58 @@
       </p>
     </div>
   </section>
-
+  <!-- END SECTION 5 -->
+  <!-- SECTION 6 -->
   <section class="section6">
     <div class="container container-6">
       <h1>Ready To Build Your Community?</h1>
       <a href="#">Get Started For Free</a>
     </div>
   </section>
+  <!-- END SECTION 6 -->
   <!-- END MAIN -->
+  <!-- FOOTER -->
   <footer>
     <div class="footer-general">
       <div class="f-container fc-1">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia
-        vestibulum a, ultrices quis sem.
-        
-        Phone: +1-543-123-4567
-        example@huddle.com
+        <picture>
+          <img class="f-logo" src="images/logo_blanco.svg" alt="">
+        </picture>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
+        </p>
+        <div class="f-contact">
+          <div class="info-contact">
+            <picture class="icon-p">
+              <img src="images/icon-phone.svg" alt="phone">
+            </picture>
+            <p>Phone: +1-543-123-4567</p>
+          </div>
+          <div class="info-contact">
+            <picture>
+              <img class="icon-m" src="images/icon-email.svg" alt="messages">
+            </picture>
+            <p>example@huddle.com</p>
+          </div>
+        </div>
       </div>
+
       <div class="f-container fc-2">
         <h1>Newsletter</h1>
         <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll neversend you spam or pass on your email address</p>
-        <a href="#">Subscribe</a>
+        <div class="form">
+          <form action="#">
+            <input class="email" type="email" name="email" id="email">
+          </form>
+          <a class="botton" href="#">Subscribe</a>
+        </div>
       </div>
+    </div>
+
+    <div class="fa">
+      <i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i>
+      <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+      <i class="fa-brands fa-square-x-twitter" style="color: #ffffff;"></i>
     </div>
 
   
@@ -123,5 +156,7 @@
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
+  <script src="https://kit.fontawesome.com/dbbe2286a1.js" crossorigin="anonymous"></script>
+  <!-- END FOOTER -->
 </body>
 </html>
