--- a/index.html
+++ b/index.html
@@ -143,14 +143,13 @@
         </div>
       </div>
     </div>
-
-    <div class="fa">
-      <i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i>
-      <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
-      <i class="fa-brands fa-square-x-twitter" style="color: #ffffff;"></i>
+      
+    <div class="fix">
+      <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
     </div>
-
-  
+      
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
