--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
  
   <title>Frontend Mentor | Huddle landing page with curved sections</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <!-- HEADER -->
@@ -24,6 +18,7 @@
   </header>
   <!-- END HEADER -->
   <!-- MAIN -->
+  <main>
   <!-- SECTION 1 -->
   <section class="section1">
     <div class="container container-1">
@@ -64,10 +59,12 @@
       <picture>
         <img src="images/illustration-grow-together.svg" alt="">
       </picture>
-      <h1>Grow Together</h1>
-      <p>
-        Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
-      </p>
+      <div class="c3-text">
+        <h1>Grow Together</h1>
+        <p>
+          Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
+        </p>
+      </div>
     </div>
   </section> 
   <!-- END SECTION 3 -->
@@ -77,10 +74,12 @@
       <picture>
         <img src="images/illustration-flowing-conversation.svg" alt="">
       </picture>
-      <h1>Flowing Conversations</h1>
-      <p>
-        You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
-      </p>
+      <div class="c4-text">
+        <h1>Flowing Conversations</h1>
+        <p>
+          You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
+        </p>
+      </div>
     </div>
   </section>
   <!-- END SECTION 4 -->
@@ -90,10 +89,12 @@
       <picture>
         <img src="images/illustration-your-users.svg" alt="">
       </picture>
-      <h1>Your Users</h1>
-      <p>
-        It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.
-      </p>
+      <div class="c5-text">
+        <h1>Your Users</h1>
+        <p>
+          It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.
+        </p>
+      </div>
     </div>
   </section>
   <!-- END SECTION 5 -->
@@ -104,6 +105,8 @@
       <a href="#">Get Started For Free</a>
     </div>
   </section>
+  <script src="https://kit.fontawesome.com/dbbe2286a1.js" crossorigin="anonymous"></script>
+</main>
   <!-- END SECTION 6 -->
   <!-- END MAIN -->
   <!-- FOOTER -->
@@ -152,10 +155,10 @@
       
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Sebastian Rodriguez</a>.
     </p>
   </footer>
-  <script src="https://kit.fontawesome.com/dbbe2286a1.js" crossorigin="anonymous"></script>
+ 
   <!-- END FOOTER -->
 </body>
 </html>
